Enhance resume download

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <li><a href="#contact">Contact me</a></li>
       </ul>
       <div class="flex items-center gap-4">
-        <button onclick="toggleTheme()">
+        <!-- <button onclick="toggleTheme()">
           <img src="./images/moon_icon.png" class="w-6 dark:hidden" />
           <img src="./images/sun_icon.png" class="w-6 hidden dark:block" />
-        </button>
+        </button> -->
 
         <a
           href="#contact"
