Add one project in the portfolio

--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
     <div
       class="w-11/12 max-w-3xl text-center mx-auto flex flex-col items-center justify-center gap-4 py-20"
     >
-      <img src="./images/download.jpg" class="rounded-md w-32" />
+      <img
+        src="./images/Neon Rainbow Gradient Fun Creative LinkedIn Profile Picture.png"
+        class="rounded-md w-32"
+        style="background-color: transparent"
+      />
       <h3 class="flex items-end gap-2 text-xml md:text-2xl mb-3 font-Ovo">
         Hi! I'm Tarun Rathore<img src="./images/hand-icon.png" class="w-6" />
       </h3>
@@ -153,7 +157,7 @@
       <div class="flex w-full flex-col lg:flex-row items-center gap-20 my-20">
         <div class="max-w-max mx-auto relative">
           <img
-            src="./images/download.jpg"
+            src="./images/Neon Rainbow Gradient Fun Creative LinkedIn Profile Picture.png"
             class="w-64 sm:w-80 rounded-3xl max-w-none"
           />
 
@@ -339,7 +343,7 @@
       <div class="grid grid-cols-1 my-10 dark:text-black">
         <!-- Project 1 -->
         <div
-          class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+          class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row mb-5"
         >
           <!-- Image Section -->
           <div class="w-full lg:w-1/2 p-3">
@@ -374,7 +378,7 @@
               React | Tailwind | Node.js | Express.js | MongoDB
             </span>
             <!-- Optional: Add a button or link to the project -->
-            <h2 class="my-3 text-lg">Area of Responsibility:</h2>
+            <h2 class="my-3 text-lg font-semibold">Area of Responsibility:</h2>
             <ul class="list-disc pl-5 mb-4 grid md:grid-cols-2 text-sm">
               <li>Cart Management</li>
               <li>Wishlist Management</li>
@@ -393,6 +397,81 @@
 
               <a
                 href="https://github.com/utkarsh032/Udemy"
+                target="_blank"
+                download
+                class="px-7 py-2 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black text-sm"
+                >View Code <img src="./icons/code-svgrepo-com.svg" class="w-5"
+              /></a>
+            </div>
+          </div>
+        </div>
+
+        <!------ Project-2 ------>
+        <div
+          class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+        >
+          <!-- Image Section -->
+          <div class="w-full lg:w-1/2 p-3">
+            <img
+              src="./images/TravelScout2.png"
+              alt="Udemy Clone Project"
+              class="w-full h-full object-cover"
+            />
+          </div>
+
+          <!-- Details Section -->
+          <div class="w-full lg:w-1/2 p-6">
+            <h2 class="text-2xl font-bold mb-3">
+              TravelScout - Destination Recommendation Platform
+            </h2>
+            <p class="mb-3 text-sm max-h-24 overflow-y-auto">
+              A full-stack web application that simplifies travel planning by
+              recommending destinations based on user preferences and travel
+              history.
+            </p>
+
+            <ul class="grid md:grid-cols-2 list-disc pl-5 mb-4 gap-x-5 text-sm">
+              <li>User Authentication & Authorization</li>
+              <li>User Profile Management</li>
+              <li>Secure API Design</li>
+              <li>Wishlist & Travel Styles</li>
+              <li>Cloud Integration</li>
+            </ul>
+            <b class="text-sm">Tech Stack:</b>
+            <span class="ml-2 text-sm">
+              Node.js | Express.js | MongoDB | React.js | Claudinary
+            </span>
+            <!-- Optional: Add a button or link to the project -->
+            <h2 class="mb-1 mt-3 text-lg font-semibold">
+              Area of Responsibility:
+            </h2>
+
+            <p class="text-sm text-wrap mb-2">
+              Complete backend system by creating 25+ RESTful API endpoints to
+              handle user authentication, destination recommendations, profile
+              management, preferences, and travel history.
+            </p>
+            <ul class="grid md:grid-cols-2 list-disc pl-5 mb-4 gap-x-5 text-sm">
+              <li>User Sign-up/Login, Forgot & Reset Password</li>
+              <li>Profile and Preference Management</li>
+              <li>Trending & Discover Sections</li>
+              <li>Travel history and wishlist functionality</li>
+              <li>
+                Managed images with Cloudinary and stored structured data using
+                MongoDB Atlas
+              </li>
+            </ul>
+            <div class="flex flex-col sm:flex-row items-center gap-3 mt-3">
+              <a
+                href="https://travel-scout-liard.vercel.app/"
+                class="px-8 py-2 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent text-sm"
+                >View Project<img
+                  src="./images/right-arrow-white.png"
+                  class="w-4"
+              /></a>
+
+              <a
+                href="https://github.com/taruncodex/TravelScout"
                 target="_blank"
                 download
                 class="px-7 py-2 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black text-sm"
