--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       class="w-11/12 max-w-3xl text-center mx-auto flex flex-col items-center justify-center gap-4 py-20"
     >
       <img
-        src="./images/Neon Rainbow Gradient Fun Creative LinkedIn Profile Picture.png"
+        src="./images/Tarun Profile2.png"
         class="rounded-md w-32"
         style="background-color: transparent"
       />
@@ -157,10 +157,10 @@
       <div class="flex w-full flex-col lg:flex-row items-center gap-20 my-20">
         <div class="max-w-max mx-auto relative">
           <img
-            src="./images/Neon Rainbow Gradient Fun Creative LinkedIn Profile Picture.png"
+            src="./images/Tarun Profile2.png"
             class="w-64 sm:w-80 rounded-3xl max-w-none"
+            alt="Tarun's Profile Pic"
           />
-
           <div
             class="bg-white w-1/2 aspect-square absolute right-0 bottom-0 rounded-full translate-x-1/4 translate-y-1/3 shadow-[0_4px_55px_rgba(149,0,162,0.15)] flex items-center justify-center"
           >
