--- a/index.html
+++ b/index.html
@@ -341,7 +341,83 @@
 
       <!-- Project Container -->
       <div class="grid grid-cols-1 my-10 dark:text-black">
-        <!-- Project 1 -->
+        <!-- Project-1 -->
+        <div
+          class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+        >
+          <!-- Image Section -->
+          <div class="w-full lg:w-1/2 p-3">
+            <img
+              src="./images/Elysian state.png"
+              alt="Elysian Estate Project"
+              class="w-full h-full object-cover"
+            />
+          </div>
+
+          <!-- Details Section -->
+          <div class="w-full lg:w-1/2 p-6">
+            <h2 class="text-2xl font-bold mb-3">Elysian Estate</h2>
+            <p class="mb-3 text-sm max-h-24 overflow-y-auto">
+              A full-stack real estate web application that allows users to
+              explore, search, and manage property listings with interactive
+              details, personalized favorite collections and dynamic filtering —
+              designed for a seamless property discovery experience.
+            </p>
+
+            <ul class="grid md:grid-cols-2 list-disc pl-5 mb-4 gap-x-5 text-sm">
+              <li>User Authentication & Authorization</li>
+              <li>User Profile Management</li>
+              <li>Secure API Design</li>
+              <li>Wishlist & Travel Styles</li>
+              <li>Cloud Integration</li>
+            </ul>
+            <b class="text-sm">Tech Stack:</b>
+            <span class="ml-2 text-sm">
+              Html | css | JavaScript | NodeJs | Express | MongoDB
+            </span>
+            <!-- Optional: Add a button or link to the project -->
+            <h2 class="mb-1 mt-3 text-lg font-semibold">
+              Area of Responsibility:
+            </h2>
+
+            <p class="text-sm text-wrap mb-2">
+              Complete Complete Frontend interface and backend system by
+              creating 7 html pages and 10+ RESTful API endpoints.
+            </p>
+            <ul class="grid md:grid-cols-2 list-disc pl-5 mb-4 gap-x-5 text-sm">
+              <li>User Sign-up/Login, Forgot & Reset Password</li>
+              <li>
+                Designed and developed complete frontend interface (Home, Login,
+                Favorites, Profile, About pages).
+              </li>
+              <li>Added favorites management system (add/remove).</li>
+              <li>
+                Real-time search suggestions and infinite scroll using
+                JavaScript.
+              </li>
+              <li>Created Schemas with MongoDB for structured data storage.</li>
+            </ul>
+            <div class="flex flex-col sm:flex-row items-center gap-3 mt-3">
+              <a
+                href="https://elysian-estates-1.onrender.com"
+                class="px-8 py-2 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent text-sm"
+                >View Project<img
+                  src="./images/right-arrow-white.png"
+                  class="w-4"
+              /></a>
+
+              <a
+                href="https://github.com/taruncodex/Elysian-Estates"
+                target="_blank"
+                download
+                class="px-7 py-2 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black text-sm"
+                >View Code <img src="./icons/code-svgrepo-com.svg" class="w-5"
+              /></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
         <div
           class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row mb-5"
         >
