--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
             <p class="text-sm text-wrap mb-2">
               Complete Complete Frontend interface and backend system by
-              creating 7 html pages and 10+ RESTful API endpoints.
+              creating 7 html pages, 10+ RESTful API endpoints, Database creation and management.
             </p>
             <ul class="grid md:grid-cols-2 list-disc pl-5 mb-4 gap-x-5 text-sm">
               <li>User Sign-up/Login, Forgot & Reset Password</li>
