--- a/index.html
+++ b/index.html
@@ -340,17 +340,17 @@
       </p>
 
       <!-- Project Container -->
-      <div class="grid grid-cols-1 my-10 dark:text-black">
+      <div class="grid grid-cols-1 gap-14 my-10 dark:text-black">
         <!-- Project-1 -->
         <div
-          class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+          class="bg-teal-100 dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
         >
           <!-- Image Section -->
-          <div class="w-full lg:w-1/2 p-3">
+          <div class="w-full lg:w-1/2 p-5">
             <img
               src="./images/Elysian state.png"
               alt="Elysian Estate Project"
-              class="w-full h-full object-cover"
+              class="w-full h-5/6 mt-5"
             />
           </div>
 
@@ -382,7 +382,8 @@
 
             <p class="text-sm text-wrap mb-2">
               Complete Complete Frontend interface and backend system by
-              creating 7 html pages, 10+ RESTful API endpoints, Database creation and management.
+              creating 7 html pages, 10+ RESTful API endpoints, Database
+              creation and management.
             </p>
             <ul class="grid md:grid-cols-2 list-disc pl-5 mb-4 gap-x-5 text-sm">
               <li>User Sign-up/Login, Forgot & Reset Password</li>
@@ -400,7 +401,7 @@
             <div class="flex flex-col sm:flex-row items-center gap-3 mt-3">
               <a
                 href="https://elysian-estates-1.onrender.com"
-                class="px-8 py-2 border rounded-full bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent text-sm"
+                class="px-8 py-2 border rounded-full hover:shadow-sm bg-gradient-to-r from-[#b820e6] to-[#da7d20] text-white flex items-center gap-2 dark:border-transparent text-sm"
                 >View Project<img
                   src="./images/right-arrow-white.png"
                   class="w-4"
@@ -419,7 +420,7 @@
 
         <!-- Project 3 -->
         <div
-          class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row mb-5"
+          class="bg-orange-100 dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
         >
           <!-- Image Section -->
           <div class="w-full lg:w-1/2 p-3">
@@ -484,7 +485,7 @@
 
         <!------ Project-2 ------>
         <div
-          class="bg-white dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+          class="bg-blue-100 dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
         >
           <!-- Image Section -->
           <div class="w-full lg:w-1/2 p-3">
