--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       <div class="grid grid-cols-1 gap-14 my-10 dark:text-black">
         <!-- Project-1 -->
         <div
-          class="bg-teal-100 dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+          class="bg-teal-100 dark:bg-gray-800 dark:text-teal-100 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
         >
           <!-- Image Section -->
           <div class="w-full lg:w-1/2 p-5">
@@ -420,7 +420,7 @@
 
         <!-- Project 3 -->
         <div
-          class="bg-orange-100 dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+          class="bg-orange-100 dark:bg-gray-800 dark:text-teal-100 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
         >
           <!-- Image Section -->
           <div class="w-full lg:w-1/2 p-3">
@@ -485,7 +485,7 @@
 
         <!------ Project-2 ------>
         <div
-          class="bg-blue-100 dark:bg-gray-800 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
+          class="bg-blue-100 dark:bg-gray-800 dark:text-teal-100 shadow-lg rounded-lg overflow-hidden flex flex-col lg:flex-row"
         >
           <!-- Image Section -->
           <div class="w-full lg:w-1/2 p-3">
