--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         /></a>
 
         <a
-          href="./images/TarunRathore-NodeJSDeveloper-CBl6_page-0001.jpg"
+          href="./images/NewResume.pdf"
           target="_blank"
           class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-white dark:text-black"
           onclick="downloadResume(event)"
