--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                 Languages
               </h3>
               <p class="text-gray-600 text-sm dark:text-white/80">
-                NodeJs, ExpressJs, HTML, CSS, JavaScript, MongoDB
+                NodeJs, ExpressJs, React, HTML, CSS, JavaScript, MongoDB,
+                ChakraUi
               </p>
             </li>
             <li
@@ -300,17 +301,23 @@
             <li
               class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500"
             >
-              <img src="./images/node-js.svg" class="w-5 sm:w-7" />
+              <img src="./images/node-js.svg" alt="Node" class="w-5 sm:w-7" />
+            </li>
+
+            <li
+              class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500"
+            >
+              <img src="./icons/atom.png" alt="" class="w-7 sm:w-7" />
             </li>
             <li
               class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500"
             >
-              <img src="./images/html-5.svg" class="w-5 sm:w-7" />
+              <img src="./images/html-5.svg" alt="HTML" class="w-5 sm:w-7" />
             </li>
             <li
               class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500"
             >
-              <img src="./images/css-3.svg" class="w-7 sm:w-7" />
+              <img src="./images/css-3.svg" alt="CSS" class="w-7 sm:w-7" />
             </li>
             <li
               class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500"
@@ -318,13 +325,27 @@
               <img
                 src="./icons/redis-logo-svgrepo-com.svg"
                 class="w-7 sm:w-7"
+                alt="Redis"
                 aria-placeholder="Redis"
               />
             </li>
             <li
               class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500"
             >
-              <img src="./images/tailwind-css-icon.webp" class="w-7 sm:w-7" />
+              <img
+                src="./images/tailwind-css-icon.webp"
+                alt=""
+                class="w-7 sm:w-7"
+              />
+            </li>
+            <li
+              class="flex items-center justify-center w-12 sm:w-14 aspect-square border border-gray-400 rounded-lg cursor-pointer hover:-translate-y-1 duration-500"
+            >
+              <img
+                src="./icons/icons8-chakra-ui.svg"
+                alt="ChakraUi"
+                class="w-7 sm:w-7"
+              />
             </li>
           </ul>
         </div>
